4.4.9 -> 4.5:
	- glen: install rpmdeps, rpmdigest, rpmmtree, rpmrepo tools to bindir
	- glen: add mono deps from PLD
	- glen: call %__java-{requires/provides} for java files (jars/classes)
	- glen: hotwire only -lossp-uuid not both with -luuid
	- glen: backport: perform fsync(2) before closing installed file (patchset#7657).
	- jbj: tests: verify -Kv output using popt.
	- jbj: tests: verify setup using --version/--querytags/--showrc.
	- jbj: display noisy getconf()/uname() info with -vv --showrc instead.
	- jbj: shorten debugging messages, --queryformat strings passed to
	    headerSprintf are getting huge.
	- jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	    (see --yum:primary.yaml spew for reproducer)
	- jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
	- jbj: expose intFormat() for use by ":rpn()".
	- jbj: backport remaining header ext tags/formats.
	- jbj: hotwire -luuid and backport rpmuuid.[ch].
	- jbj: add expanded build scripts for --specsrpm --queryformat
	- jbj: retrofit some arbitrary tagno's.
	- jbj: fix: is_selinux_enbled() > 0 is the correct test.
	- rpm.org: Mask signals while moving rebuilt rpmdb into place.
	- rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
	- jbj: debuginfo: refactor 2 existing upgrade policy rules before
	    adding a new contextually sensitive rule for -debuginfo packages.
	- jbj: debuginfo: add general rpmdbCount() to get number of items for
	    any tag index, not just RPMTAG_NAME as was in rpmdbCountPackages().
	- jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
	- jbj: add %_build_iconsize macro to permit configuration.
	- jbj: trash-and-restore macro config for multiple CLI arg builds.
	- jbj: tests: disable *UUID tests, enable rpmrepo --database coverage.
	- jbj: rpmrepo: correct requiressql tag name typo, enable WITH_SQLITE.
	- jbj: add header tag extension to extract baseurl.